--- a/index.ipynb
+++ b/index.ipynb
@@ -94,12 +94,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    return int()"
+    "    return int(1.5*advertising + 20)"
    ]
   },
   {
