--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    return {'m': m, 'b': b, 'x': x_values}"
+    "    return {'m': m, 'b': b, 'x': x_values, ''}"
    ]
   },
   {
