--- a/index.ipynb
+++ b/index.ipynb
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = \n",
+    "    y_values = m*\n",
     "    return {'x': x_values, 'y': m*int('x_values') + b}"
    ]
   },
