automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -277,8 +277,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = m*\n",
-    "    return {'x': x_values, 'y': m*int('x_values') + b}"
+    "    y_values = m*x_values + b\n",
+    "    return {'x': x_values, 'y': Y}"
    ]
   },
   {
