--- a/index.ipynb
+++ b/index.ipynb
@@ -272,12 +272,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y_values = m*x_values + b\n",
+    "    y_values = m*int(x_values) + b\n",
     "    return {'x': x_values, 'y': y_values}"
    ]
   },
