--- a/index.ipynb
+++ b/index.ipynb
@@ -277,6 +277,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
+    "    for \n",
     "    y_values = m*int(x_values) + b\n",
     "    return {'x': x_values, 'y': y_values}"
    ]
