--- a/index.ipynb
+++ b/index.ipynb
@@ -310,13 +310,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
     "    y_values = list(map(lambda x: m*x + b, x_values))\n",
-    "    return {'mode': mode, 'line': line, 'x': x_values, 'y': y_values}"
+    "    return {'mode': mode, 'name': name, 'x': x_values, 'y': y_values}"
    ]
   },
   {
