--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return ()"
+    "    return (list(map(lambda x: )))"
    ]
   },
   {
