--- a/index.ipynb
+++ b/index.ipynb
@@ -400,7 +400,7 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (list(map(lambda x: (second_show['y'] - first_show['y'])/(second_show['x'] - first_show['x']), x_values)))"
+    "    return (second_show['y'] - first_show['y'])/(second_show['x'] - first_show['x']"
    ]
   },
   {
