automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -395,12 +395,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    return (second_show['y'] - first_show['y'])/(second_show['x'] - first_show['x'])"
+    "    return (second_show['attendance'] - first_show['attendance'])/(second_show['budget'] - first_show['budget'])"
    ]
   },
   {
