--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    return "
+    "    return m"
    ]
   },
   {
