--- a/index.ipynb
+++ b/index.ipynb
@@ -603,7 +603,8 @@
    "outputs": [],
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
-    "    m = [slope]"
+    "    m = [slope]\n",
+    "    return "
    ]
   },
   {
