--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    \n",
+    "    values = list(zip())\n",
     "    return (max(y_values) - min(y_values))/(max(x_values) - min(x_values))"
    ]
   },
