automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,8 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
-    "    return (max(y_values) - min(y_values))/(max(x_values) - min(x_values))"
+    "    sorted values = \n",
+    "    return sorted_values"
    ]
   },
   {
