--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,7 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
-    "    sorted values = \n",
+    "    x1 = sorted_values()\n",
     "    return sorted_values"
    ]
   },
