--- a/index.ipynb
+++ b/index.ipynb
@@ -567,7 +567,8 @@
    "source": [
     "def slope(x_values, y_values):\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
-    "    x1 = sorted_values()\n",
+    "    x1 = sorted_values[0][0]\n",
+    "    \n",
     "    return sorted_values"
    ]
   },
