automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -611,7 +611,7 @@
     "def y_intercept(x_values, y_values, m = None):\n",
     "    m = slope(x_values, y_values)\n",
     "    x2 = sorted_values[1][0]\n",
-    "    y_intercept"
+    "    y_int = "
    ]
   },
   {
