--- a/index.ipynb
+++ b/index.ipynb
@@ -610,7 +610,7 @@
    "source": [
     "def y_intercept(x_values, y_values, m = None):\n",
     "    m = slope(x_values, y_values)\n",
-    "    \n",
+    "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x2 = sorted_values[1][0]\n",
     "    y_int = \n",
     "    return "
