automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -612,7 +612,7 @@
     "    m = slope(x_values, y_values)\n",
     "    sorted_values = sorted_points(x_values, y_values)\n",
     "    x2 = sorted_values[1][0]\n",
-    "    y_int = \n",
+    "    y_int = y2 - m*x\n",
     "    return "
    ]
   },
