automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,14 +614,25 @@
     "    x2 = sorted_values[1][0]\n",
     "    y2 = sorted_values[1][1]\n",
     "    y_int = y2 - m*x2\n",
-    "    return "
+    "    return inty_int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100.0"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "y_intercept([200, 400], [400, 700]) # 100"
    ]
