automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -614,12 +614,12 @@
     "    if m == None:\n",
     "        m = slope(x_values, y_values)\n",
     "    offset = highest[1] - m*highest[0]\n",
-    "    return offset"
+    "    return int(offset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -628,7 +628,7 @@
        "100.0"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
