--- a/index.ipynb
+++ b/index.ipynb
@@ -673,7 +673,7 @@
    "outputs": [],
    "source": [
     "def build_starting_line(x_values, y_values):\n",
-    "    return {'b': }"
+    "    return {'b': y_intercept}"
    ]
   },
   {
