automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -727,10 +727,7 @@
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    m = slope\n",
-    "    b = y_intercept\n",
-    "    x = x_values\n",
-    "    return m*x + b"
+    "    return m*x_value"
    ]
   },
   {
